Removals and edits to check CI/CD

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html data-wf-domain="bottomline.elevationcapital.com" data-wf-page="64ef412686e87adfb359db48" data-wf-site="64de0e32be614455807490db">
     <head>
         <meta charset="utf-8"/>
-        <title>The Bottomline: Elevation Fintech Report 2023</title>
-        <meta content="A Definitive Blueprint For $400B Value Creation By 2030" name="description"/>
-        <meta content="The Bottomline: Elevation Fintech Report 2023" property="og:title"/>
-        <meta content="A Definitive Blueprint For $400B Value Creation By 2030" property="og:description"/>
+        <title>The Topline: SaaS Investment Report 2023</title>
+        <meta content="Frameworks for investing in tech startups" name="description"/>
+        <meta content="The Topline: SaaS Investment Report 2023" property="og:title"/>
+        <meta content="Frameworks for investing in tech startups" property="og:description"/>
         <meta content="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64f041c775e6a333254eac8f_Slide1.png" property="og:image"/>
-        <meta content="The Bottomline: Elevation Fintech Report 2023" property="twitter:title"/>
-        <meta content="A Definitive Blueprint For $400B Value Creation By 2030" property="twitter:description"/>
+        <meta content="The Topline: SaaS Investment Report 2023" property="twitter:title"/>
+        <meta content="Frameworks for investing in tech startups" property="twitter:description"/>
         <meta content="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64f041c775e6a333254eac8f_Slide1.png" property="twitter:image"/>
         <meta property="og:type" content="website"/>
         <meta content="summary_large_image" name="twitter:card"/>
@@ -579,73 +579,6 @@
                 </div>
                 <div class="right-arrow-3 w-slider-arrow-right">
                     <div class="icon w-icon-slider-right"></div>
-                </div>
-            </div>
-        </section>
-        <section class="footer">
-            <div class="div-block-9">
-                <div class="div-block-204">
-                    <div class="div-block-206">
-                        <h2 class="heading margin">Above. Beyond. Together</h2>
-                    </div>
-                    <div class="div-block-203">
-                        <div id="w-node-_4e0a33ca-4ff2-5e3d-ea20-4ad5053f11ec-053f11e4" class="div-block-221">
-                            <div class="footer-address">
-                                <span class="opecity-50">
-                                    Delhi-NCR, India<br/>‍
-                                </span>
-                                1502, 15th Floor, One Horizon, Sector 43, DLF Phase V, Golf Course Road, Gurgaon 122002
-                            </div>
-                        </div>
-                        <div id="w-node-_4e0a33ca-4ff2-5e3d-ea20-4ad5053f11f3-053f11e4" class="div-block-222">
-                            <div class="footer-address">
-                                <span class="opecity-50">
-                                    Bengaluru, India<br/>‍
-                                </span>
-                                No. 23, 6th Floor, Leela Collonnade, HAL Old Airport Rd, Bengaluru 560008
-                            </div>
-                        </div>
-                        <div id="w-node-_4e0a33ca-4ff2-5e3d-ea20-4ad5053f11fa-053f11e4" class="div-block-223">
-                            <div class="footer-address">
-                                <span class="opecity-50">
-                                    Salt Lake City, USA <br/>‍
-                                </span>
-                                341 South Main Street, Suite 500, Salt Lake City, Utah 84111
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="div-block-205">
-                    <div class="div-block-207 width">
-                        <div class="footer-address">
-                            <span class="opecity-50">
-                                Get In Touch<br/>‍
-                            </span>
-                            <a href="mailto:info@elevationcapital.com" class="link-2">
-                                <span class="text-span-2">
-                                    info@elevationcapital.com<br/>‍
-                                </span>
-                            </a>
-                            <a href="tel:+911244965500" class="link">
-                                <span class="text-span">+91 124 4965500</span>
-                            </a>
-                        </div>
-                        <div class="div-block-209">
-                            <a href="https://twitter.com/elevcap" target="_blank" class="twitter w-inline-block"></a>
-                            <a href="https://www.linkedin.com/company/elevationcap/" target="_blank" class="linkedin w-inline-block"></a>
-                            <a href="https://elevationcapital.com/" target="_blank" class="website w-inline-block"></a>
-                        </div>
-                    </div>
-                    <div class="div-block-208">
-                        <div class="footer-address">
-                            <span class="opecity-50">
-                                Elevation<br/>
-                            </span>
-                            <a href="https://elevationcapital.com/privacy-and-terms" class="link-3">Privacy &amp;Terms</a>
-                            <br/>
-                            © 2020 Elevation Capital.<br/>All rights reserved
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
