--- a/index.html
+++ b/index.html
@@ -143,58 +143,11 @@
                 </div>
             </div>
         </section>
-        <section class="section-40">
-            <div class="text-block-12">Sign up to get the next part of The Bottomline directly in your inbox, and insights from Elevation’s fintech practice.</div>
-            <div class="div-block-234">
-                <div class="footer-form w-form">
-                    <form id="wf-form-Sign-Up-Form" name="wf-form-Sign-Up-Form" data-name="Sign Up Form" method="get" class="form-footer" data-wf-page-id="64ef412686e87adfb359db48" data-wf-element-id="77c3a1a1-6545-0227-7bc5-a9af93977b48">
-                        <input type="email" class="text-field-f w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Email" id="email-2"/>
-                        <input type="submit" value="Submit" data-wait="Please wait..." class="submit-button-f w-button"/>
-                    </form>
-                    <div class="success-message-f w-form-done">
-                        <div class="text-block-6-f">
-                            Thank you! <a href="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64f0978d6be0cfdb34ef14ad_The%20Bottomline-%20Elevation%20Fintech%20Report.pdf" target="_blank" class="link-9-f">Download Section 01</a>
-                            of The Bottomline.
-                        </div>
-                    </div>
-                    <div class="error-message w-form-fail">
-                        <div class="text-block-7-copy f">Oops! Something went wrong while submitting the form.</div>
-                    </div>
-                </div>
-                <div data-w-id="77c3a1a1-6545-0227-7bc5-a9af93977b54" class="div-block-233"></div>
-            </div>
-        </section>
-        <div class="form-lightbox">
-            <div id="w-node-_38199158-79ef-bbc8-f941-54cbe77a8bf8-b359db48" data-w-id="38199158-79ef-bbc8-f941-54cbe77a8bf8" class="dimmer"></div>
-            <div id="w-node-_38199158-79ef-bbc8-f941-54cbe77a8bf9-b359db48" class="form-wrapper">
-                <div class="text-block-5">Sign up to get the next part of The Bottomline directly in your inbox.</div>
-                <div class="form-block-2 w-form">
-                    <form id="wf-form-Sign-Up-Form" name="wf-form-Sign-Up-Form" data-name="Sign Up Form" method="get" class="form" data-wf-page-id="64ef412686e87adfb359db48" data-wf-element-id="38199158-79ef-bbc8-f941-54cbe77a8bfd">
-                        <input type="email" class="text-field w-input" autofocus="true" maxlength="256" name="email-2" data-name="Email 2" placeholder="Email" id="email-2"/>
-                        <input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"/>
-                        <div class="text-block-8">
-                            <a href="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64f0978d6be0cfdb34ef14ad_The%20Bottomline-%20Elevation%20Fintech%20Report.pdf" target="_blank" class="link-8">Download Section 01</a>
-                            without signing up for updates
-                        </div>
-                    </form>
-                    <div class="success-message w-form-done">
-                        <div class="text-block-6">
-                            Thank you!<br/>
-                            <a href="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64f0978d6be0cfdb34ef14ad_The%20Bottomline-%20Elevation%20Fintech%20Report.pdf" target="_blank" class="link-9">Download Section 01</a>
-                            of The Bottomline.
-                        </div>
-                    </div>
-                    <div class="w-form-fail">
-                        <div class="text-block-7">Oops! Something went wrong while submitting the form.</div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <section class="landing">
             <div class="div-block">
                 <h1 data-w-id="8480623a-70e0-25a4-84e0-1e70cd84e6b2" style="opacity:0" class="h1 botom-margin">
                     <span class="white">THE </span>
-                    BOTTOMLINE
+                    TOPLINE
                 </h1>
                 <div data-w-id="c48b7f4c-ef88-d8b0-aacf-075ac2c276ed" style="opacity:0" class="sub-text bottom-margin">
                     <span>Elevation</span>
@@ -209,7 +162,7 @@
                         <div class="div-block-210">
                             <div class="text-block">
                                 introducing<br/>
-                                ‍<span class="text-span-3">The bottomline</span>
+                                ‍<span class="text-span-3">The topline</span>
                             </div>
                             <p class="landing-links-subtext">Click to read</p>
                         </div>
