--- a/index.html
+++ b/index.html
@@ -106,43 +106,6 @@
         </script>
     </head>
     <body>
-        <section class="nav-bar">
-            <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-                <div class="div-block-219">
-                    <a href="https://elevationcapital.com/" target="_blank" class="brand w-nav-brand">
-                        <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64def8c22e4dcbff8ff5ad27_elevation-capital-logo.svg" loading="lazy" alt="" class="image"/>
-                    </a>
-                    <nav role="navigation" class="nav-menu w-nav-menu">
-                        <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-                        <a data-w-id="8a36a229-73d5-7d3f-9248-337fb4bb3aee" href="#" class="nav-link w-nav-link">Download Section 01</a>
-                        <div data-hover="false" data-delay="0" class="dropdown w-dropdown">
-                            <div class="dropdown-toggle w-dropdown-toggle">
-                                <div class="w-icon-dropdown-toggle"></div>
-                                <div>The Macro View</div>
-                            </div>
-                            <nav class="dropdown-list w-dropdown-list">
-                                <a href="https://bottomline.elevationcapital.com/the-macro-view" class="dropdown-link w-dropdown-link">The Macro View</a>
-                                <a href="https://bottomline.elevationcapital.com/the-macro-view#videos" class="dropdown-link-2 w-dropdown-link">Conversations</a>
-                                <a href="https://bottomline.elevationcapital.com/the-macro-view#addendum" class="dropdown-link-3 w-dropdown-link">Deep Dives</a>
-                            </nav>
-                        </div>
-                        <a href="/about-fintech-at-elevation" class="nav-link w-nav-link">Fintech @ Elevation</a>
-                        <div class="div-block-227">
-                            <a href="https://www.linkedin.com/company/elevationcap/" target="_blank" class="link-block w-inline-block">
-                                <div class="icon-embed-xxsmall w-embed">
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--simple-icons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                                        <path fill="currentColor" d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037c-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85c3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065a2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path>
-                                    </svg>
-                                </div>
-                            </a>
-                        </div>
-                    </nav>
-                    <div class="menu-button w-nav-button">
-                        <div class="w-icon-nav-menu"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section class="landing">
             <div class="div-block">
                 <h1 data-w-id="8480623a-70e0-25a4-84e0-1e70cd84e6b2" style="opacity:0" class="h1 botom-margin">
@@ -150,10 +113,10 @@
                     TOPLINE
                 </h1>
                 <div data-w-id="c48b7f4c-ef88-d8b0-aacf-075ac2c276ed" style="opacity:0" class="sub-text bottom-margin">
-                    <span>Elevation</span>
-                    Fintech Report 2023
+                    <span></span>
+                    SaaS Investment Report 2023
                 </div>
-                <p data-w-id="e9dd1593-a459-67e0-e07d-2c5fe4510992" style="opacity:0" class="paragraph top-section">A Definitive Blueprint For $400B Value Creation By 2030</p>
+                <p data-w-id="e9dd1593-a459-67e0-e07d-2c5fe4510992" style="opacity:0" class="paragraph top-section">Frameworks for investing in tech startups</p>
                 <a data-w-id="096f2356-f23a-f6f8-1fae-193d3cbdd460" style="opacity:0" href="#" class="button-dark-copy show-copy w-button">
                     DOWNLOAD <span class="blue">SECTION 01</span>
                 </a>
