--- a/index.html
+++ b/index.html
@@ -117,9 +117,6 @@
                     SaaS Investment Report 2023
                 </div>
                 <p data-w-id="e9dd1593-a459-67e0-e07d-2c5fe4510992" style="opacity:0" class="paragraph top-section">Frameworks for investing in tech startups</p>
-                <a data-w-id="096f2356-f23a-f6f8-1fae-193d3cbdd460" style="opacity:0" href="#" class="button-dark-copy show-copy w-button">
-                    DOWNLOAD <span class="blue">SECTION 01</span>
-                </a>
                 <div class="div-block-202">
                     <a data-w-id="8ab4980a-15a8-91db-4a87-dc97ad9e347d" style="opacity:0" href="/about-bottomline-fintech-report" class="link-block-4 w-inline-block">
                         <div class="div-block-210">
@@ -134,29 +131,29 @@
                         <div class="div-block-210 macro">
                             <p class="landing-links-subtext">SECTION 01</p>
                             <div class="text-block">
-                                <span class="text-span-3">THE Macro</span>
+                                <span class="text-span-3">AI Investment Categories</span>
                                 <br/>view
                             </div>
-                            <p class="landing-links-subtext hide">India fintech - journey so far</p>
+                            <p class="landing-links-subtext hide">Four categories of opportunities in AI</p>
                         </div>
                     </a>
                     <a href="#10-themes" data-w-id="0e60b0b6-819b-75d3-2c3b-8e8304934695" style="opacity:0" class="link-block-4 w-inline-block">
                         <div class="div-block-210 disabled">
                             <p class="landing-links-subtext">SECTION 02</p>
                             <div class="text-block">
-                                Key Themes Driving <br/>Value Creation
+                                Category creation by marketplaces
                             </div>
-                            <p class="landing-links-subtext">Coming Soon</p>
+                            <p class="landing-links-subtext">Ecommerce, Quick commerce and Premiumisation</p>
                         </div>
                     </a>
                     <a href="#1toN" data-w-id="1235ad89-9dbf-ae31-5e2d-e059e84ae2b7" style="opacity:0" class="link-block-4 disabled w-inline-block">
                         <div class="div-block-210 disabled">
                             <p class="landing-links-subtext disabled">SECTION 03</p>
                             <div class="text-block disabled">
-                                Building an<br/>
+                                Quantum Technology<br/>
                                 ‍<span class="text-span-3 disabled">Enduring Franchise</span>
                             </div>
-                            <p class="landing-links-subtext disabled">Coming Soon</p>
+                            <p class="landing-links-subtext disabled">Pace of technology Adaptation</p>
                         </div>
                     </a>
                 </div>
