--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <p class="landing-links-subtext">SECTION 01</p>
                             <div class="text-block">
                                 <span class="text-span-3">AI Investment Categories</span>
-                                <br/>view
+                                <br/>
                             </div>
                             <p class="landing-links-subtext hide">Four categories of opportunities in AI</p>
                         </div>
@@ -170,13 +170,12 @@
                     <div class="section-no">SECTION 01</div>
                     <h1 class="h1 botom-margin">
                         <span class="navy-blue">
-                            THE<br/>‍
+                            AI<br/>‍
                         </span>
-                        MACRO VIEW
+                        INVESTMENT CATEGORIES
                     </h1>
-                    <p class="paragraph navy-blue">The journey of fintechs so far in India, the areas they &#x27;ve focused on, their impact on the ecosystem, and the key drivers of growth alongside potential challenges.</p>
+                    <p class="paragraph navy-blue">Different areas of disruption with AI, the areas of value creation, their impact on the ecosystem, and the key drivers of growth alongside potential challenges.</p>
                     <a href="/the-macro-view" class="link-block-2 w-inline-block">
-                        <div class="button-text">Explore</div>
                     </a>
                 </div>
             </div>
@@ -185,13 +184,13 @@
             <div class="section-no">SECTION 02</div>
             <h1 class="h1 themes-margin">
                 <span class="white">
-                    10 KEY THEMES<br/>‍
+                    CATEGORY CREATION<br/>‍
                 </span>
-                THAT WILL UNLOCK VALUE
+                BY MARKETPLACES
             </h1>
             <div class="key-theme-wrapper">
                 <h2 class="second-heading">
-                    Under-Served<span class="text-span-9">end users...</span>
+                    Consumption by <span class="text-span-9">affluent households...</span>
                 </h2>
                 <div class="div-block-10">
                     <div id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e28-b359db48" data-w-id="0b8854bd-eadb-566c-e3ef-1ce910db7e28" class="div-block-11">
@@ -199,9 +198,9 @@
                         <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e2a-b359db48" alt="Elevation report "/>
                         <div id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e2b-b359db48" class="div-block-13">
                             <h4 class="theme-title">
-                                01<br/>Rise of vertical Specialists
+                                01<br/>E-commerce with innovative GTMs
                             </h4>
-                            <div class="theme-subtext hide">Coming Soon</div>
+                            <div class="theme-subtext hide">Premium category creation</div>
                             <a href="/rise-of-verticle" class="button-dark show w-inline-block">
                                 <div class="button-text">Explore</div>
                             </a>
@@ -212,9 +211,9 @@
                         <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e37-b359db48" alt="Elevation report "/>
                         <div id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e38-b359db48" class="div-block-13">
                             <h4 class="theme-title">
-                                02<br/>Delighting Affluent India
+                                02<br/>Quick-commerce offering convenience
                             </h4>
-                            <div class="theme-subtext right-padding hide">Coming Soon</div>
+                            <div class="theme-subtext right-padding hide">Delivery time crucial for customer retention</div>
                             <a href="/delighting-affluent-india" class="button-dark show w-inline-block">
                                 <div class="button-text">Explore</div>
                             </a>
@@ -225,9 +224,9 @@
                         <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e44-b359db48" alt="Elevation report "/>
                         <div id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e45-b359db48" class="div-block-13">
                             <h4 class="theme-title">
-                                03<br/>expanding credit for next 200m
+                                03<br/>Service professionals and helpers
                             </h4>
-                            <div class="theme-subtext hide">Coming Soon</div>
+                            <div class="theme-subtext hide">India-2 helping India-1</div>
                             <a href="/expanding-credit-for-next-200mn" class="button-dark show w-inline-block">
                                 <div class="button-text">Explore</div>
                             </a>
@@ -238,9 +237,9 @@
                         <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e51-b359db48" alt="Elevation report "/>
                         <div id="w-node-_0b8854bd-eadb-566c-e3ef-1ce910db7e52-b359db48" class="div-block-13">
                             <h4 class="theme-title">
-                                04<br/>Unlocking &#x27;Protection &amp;Wealth &#x27;Gap
+                                04<br/>Huge scope for many other marketplaces
                             </h4>
-                            <div class="theme-subtext hide">Coming Soon</div>
+                            <div class="theme-subtext hide">Content driven community building</div>
                             <a href="/unlocking-protection-and-wealth-gap" class="button-dark show w-inline-block">
                                 <div class="button-text">Explore</div>
                             </a>
