--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
                             <p class="landing-links-subtext disabled">SECTION 03</p>
                             <div class="text-block disabled">
                                 Quantum Technology<br/>
-                                ‍<span class="text-span-3 disabled">Enduring Franchise</span>
                             </div>
                             <p class="landing-links-subtext disabled">Pace of technology Adaptation</p>
                         </div>
@@ -170,13 +169,11 @@
                     <div class="section-no">SECTION 01</div>
                     <h1 class="h1 botom-margin">
                         <span class="navy-blue">
-                            AI<br/>‍
+                            AI INVESTMENT<br/>‍
                         </span>
-                        INVESTMENT CATEGORIES
+                        CATEGORIES
                     </h1>
                     <p class="paragraph navy-blue">Different areas of disruption with AI, the areas of value creation, their impact on the ecosystem, and the key drivers of growth alongside potential challenges.</p>
-                    <a href="/the-macro-view" class="link-block-2 w-inline-block">
-                    </a>
                 </div>
             </div>
         </section>
@@ -249,89 +246,6 @@
             </div>
             <div class="key-theme-wrapper">
                 <h2 class="second-heading">
-                    ...Served<span class="text-span-9">Contextually...</span>
-                </h2>
-                <div class="div-block-10">
-                    <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55db-b359db48" data-w-id="62ba26f0-b164-7a71-6e48-506d830d55db" class="div-block-11">
-                        <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55dc-b359db48" class="div-block-12 _05"></div>
-                        <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55dd-b359db48" alt="Elevation report "/>
-                        <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55de-b359db48" class="div-block-13">
-                            <h4 class="theme-title">
-                                05<br/>
-                                EMBEDDING CONTEXTUAL <br/>FINTECH
-                            </h4>
-                            <div class="theme-subtext">Coming Soon</div>
-                            <a data-w-id="62ba26f0-b164-7a71-6e48-506d830d55e7" href="#" class="button-dark w-inline-block">
-                                <div class="button-text">Explore</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55ea-b359db48" data-w-id="62ba26f0-b164-7a71-6e48-506d830d55ea" class="div-block-11">
-                        <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55eb-b359db48" class="div-block-12 _06"></div>
-                        <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55ec-b359db48" alt="Elevation report "/>
-                        <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55ed-b359db48" class="div-block-13">
-                            <h4 class="theme-title">
-                                06<br/>
-                                Rise of open<br/>networks
-                            </h4>
-                            <div class="theme-subtext">Coming Soon</div>
-                            <a data-w-id="62ba26f0-b164-7a71-6e48-506d830d55f6" href="#" class="button-dark w-inline-block">
-                                <div class="button-text">Explore</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55f9-b359db48" data-w-id="62ba26f0-b164-7a71-6e48-506d830d55f9" class="div-block-11">
-                        <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55fa-b359db48" class="div-block-12 _07"></div>
-                        <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55fb-b359db48" alt="Elevation report "/>
-                        <div id="w-node-_62ba26f0-b164-7a71-6e48-506d830d55fc-b359db48" class="div-block-13">
-                            <h4 class="theme-title">
-                                07<br/>
-                                digitizing b2b <br/>supply chains
-                            </h4>
-                            <div class="theme-subtext right-padding">Coming Soon</div>
-                            <a data-w-id="62ba26f0-b164-7a71-6e48-506d830d5605" href="#" class="button-dark w-inline-block">
-                                <div class="button-text">Explore</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="key-theme-wrapper">
-                <h2 class="second-heading">
-                    ...by<span class="text-span-9">Fintech x BFSI partnerships</span>
-                </h2>
-                <div class="div-block-10">
-                    <div id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72406-b359db48" data-w-id="0cff8c04-002d-7c2d-534b-e09d27a72406" class="div-block-11">
-                        <div id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72407-b359db48" class="div-block-12 _08"></div>
-                        <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72408-b359db48" alt="Elevation report "/>
-                        <div id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72409-b359db48" class="div-block-13">
-                            <h4 class="theme-title left-padding _8">
-                                08<br/>
-                                Fintech<br/>saas
-                            </h4>
-                            <div class="theme-subtext">Coming Soon</div>
-                            <a data-w-id="0cff8c04-002d-7c2d-534b-e09d27a72412" href="#" class="button-dark w-inline-block">
-                                <div class="button-text">Explore</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72415-b359db48" data-w-id="0cff8c04-002d-7c2d-534b-e09d27a72415" class="div-block-11">
-                        <div id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72416-b359db48" class="div-block-12 _09"></div>
-                        <img src="https://uploads-ssl.webflow.com/64de0e32be614455807490db/64e2ee6de35161c9de145739_Gradient%20Overlay.svg" loading="lazy" id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72417-b359db48" alt="Elevation report "/>
-                        <div id="w-node-_0cff8c04-002d-7c2d-534b-e09d27a72418-b359db48" class="div-block-13">
-                            <h4 class="theme-title">
-                                09<br/>Incumbent-attacker partnerships
-                            </h4>
-                            <div class="theme-subtext">Coming Soon</div>
-                            <a data-w-id="0cff8c04-002d-7c2d-534b-e09d27a7241f" href="#" class="button-dark w-inline-block">
-                                <div class="button-text">Explore</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="key-theme-wrapper">
-                <h2 class="second-heading">
                     Catalyzed by<span class="text-span-9">Digital Public Infrastructure</span>
                 </h2>
                 <div class="div-block-10">
@@ -342,7 +256,7 @@
                             <h4 class="theme-title left-padding">
                                 10<br/>Digital Public Infrastructure
                             </h4>
-                            <div class="theme-subtext right-padding">Coming Soon</div>
+                            <div class="theme-subtext right-padding">Aadhaar, UPI, ONDC among others</div>
                             <a data-w-id="a160e714-91c1-5615-b7f7-49888aec9703" href="#" class="button-dark w-inline-block">
                                 <div class="button-text">Explore</div>
                             </a>
@@ -357,12 +271,12 @@
                 <div class="div-block-7">
                     <div class="section-no">SECTION 03</div>
                     <h1 class="h1 botom-margin">
-                        <span class="navy-blue">BUILDING AN</span>
-                        ENDURING FRANCHISE
+                        <span class="navy-blue">QUANTUM</span>
+                        TECHNOLOGY
                     </h1>
                     <p class="paragraph navy-blue">
-                        Essential elements of fintechs &#x27;1 to N journey, evolving business models to sustain scale and profitability, and key capabilities for success.<br/>
-                        <br/>Coming Soon
+                        Comparison of tailwinds/headwinds at the time of launch of various technologies including smartphones, 4G, 5G, AI and benchmarking against quantum technology.<br/>
+                        <br/>
                     </p>
                     <a href="#" class="link-block-2 hide w-inline-block">
                         <div class="button-text">Explore</div>
